# fastapi_miniproject

./: .Dockerignore  .env  .env.docker  .env.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: database.py  main.py
app/api/: user.py  user_simple.py
app/core/: config.py  dependencies.py
app/middleware/: query_monitor.py
app/models/: __init__.py  comment.py  post.py  profile.py  user.py
app/repositories/: user_repository.py
app/services/: user_service.py
migrations/models/: 1_20250805151713_add_post_comment_profile_models.py
scripts/: benchmark.py  create_test_data.py  run.sh  test_n_plus_1.py
tests/: conftest.py  test_main.py
tests/api/: test_user.py
